--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
 
       <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
-          <a class="navbar-brand" href="#">Kamran Ahmad</a>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="index.html">About<span class="sr-only"></span></a></li>
-              <li><a href="portfolio.html">Portfolio<span class="sr-only"></span></a></li>
-              <li><a href="contact.html">Contact<span class="sr-only"></span></a></li>
-            </ul>
+          <div class="row" id="navStuff">
+            <div class="col-md-4 col-sm-4 col-xs-12" id="navbarName">
+              <a class="navbar-brand" href="#">Kamran Ahmad</a>
+            </div>
+            <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-12" id="navbarLinks">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="index.html">About<span class="sr-only"></span></a></li>
+                <li><a href="portfolio.html">Portfolio<span class="sr-only"></span></a></li>
+                <li><a href="contact.html">Contact<span class="sr-only"></span></a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </nav>
 
@@ -22,21 +28,21 @@
     
     <div class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-9">
           <div class="page-header">
             <p class="about">About Me</p>
           </div>
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
               <img src="assets/images/profilepicture.jpg" class="img-responsive center-block" alt="Kamran's Profile Picture"></div>
-              <div class="col-md-9">
+              <div class="col-md-8">
                 <p>Hello. I'm Kamran. I am originally from Thousand Oaks, California, and I moved to Durham, North Carolina, in 2014. I have a bachelor's degree in Sociology from the University of California, Davis (Go Aggies!). My background is mostly in Quality Assurance, but only on the manual side. I am hoping this program will help me learn some automation QA, though, if web design is something I really like, I might stick with it.</p>
 
                 <p>My hobbies include playing the drums, reading, video games, anime, hiking, building computers and tech in general. I've recently started getting into board games with some friends.</p>
               </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <p class="connect">Connect with Me</p>
