--- a/portfolio.html
+++ b/portfolio.html
@@ -9,12 +9,18 @@
 
       <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
-          <a class="navbar-brand" href="#">Kamran Ahmad</a>
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="index.html">About<span class="sr-only"></span></a></li>
-              <li><a href="portfolio.html">Portfolio<span class="sr-only"></span></a></li>
-              <li><a href="contact.html">Contact<span class="sr-only"></span></a></li>
-            </ul>
+          <div class="row" id="navStuff">
+            <div class="col-md-4 col-sm-4 col-xs-12" id="navbarName">
+              <a class="navbar-brand" href="#">Kamran Ahmad</a>
+            </div>
+            <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-12" id="navbarLinks">
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="index.html">About<span class="sr-only"></span></a></li>
+                <li><a href="portfolio.html">Portfolio<span class="sr-only"></span></a></li>
+                <li><a href="contact.html">Contact<span class="sr-only"></span></a></li>
+              </ul>
+            </div>
+          </div>
         </div>
       </nav>
 
@@ -22,7 +28,7 @@
     
     <div class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-9">
           <div class="page-header">
             <p class="about">Portfolio</p>
           </div>
@@ -69,7 +75,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
             <div class="panel panel-default">
               <div class="panel-heading">
                 <p class="connect">Connect with Me</p>
